# mt4-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
.grok-plugin/: plugin.json
docs/: HOST_SETUP.md  LIVE_BRIDGE.md  MOCK_TRADING_DEMO.md
examples/: cursor_mcp.json  env.mock.example  grok_config.toml
mt4_mcp/resources/: account.py
skills/mt4-mcp/: SKILL.md
src/: auto-22.py  auto-23.py  auto-25.py  auto-26.py
src/mt4_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/mt4_mcp/backend/: __init__.py  base.py  live.py  mock.py  policy.py
tests/: test_account_resource.py  test_cli_demo.py  test_live_backend.py  test_mock_backend.py  test_server_tools.py  test_status.py
